syntax = "proto3";

import "google/protobuf/any.proto";

message GrpcEmptyModel {

}

message GrpcIntModel {
	int32 value = 1;
}

message GrpcStringModel {
	string value = 1;
}

message GrpcBoolModel {
	bool value = 1;
}

message GrpcPagingModel {
	int32 page = 1;
	int32 pageSize = 2;
}

message GrpcPriceBetweenModel {
	double minimumPrice = 1;
	double maximumPrice = 2;
}