syntax = "proto3";

option csharp_namespace = "CatalogService.Api";

import "google/api/money.proto";

// ENTITIES

message GrpcProduct {
	string name = 1;
	string description = 2;
	int32 availableStock = 3;
	string link = 4;
	string productCode = 5;
	string price = 6;

	//google.type.Money price = 6;
}

// NEEDED MODELS

message GrpcProductModel {
	string name = 1;
	string description = 2;
	int32 availableStock = 3;
	string link = 4;
	string productCode = 5;
	string price = 6;
}

message ListGrpcProductModel {
	repeated GrpcProductModel products = 1;
}

message GrpcProductType {
	string name = 1;
	string description = 2;
}

message GrpcProductFeaturePropertyModel {
	int32 productId = 1;
	int32 featureId = 2;
}

message ListGrpcProductFeaturePropertyModel {
	repeated GrpcProductFeaturePropertyModel productFeatureProperties = 1;
}